# cai

./: .env.example  .gitignore  .gitlab-ci.yml  .gitmodules  CITATION.cff  LICENSE  README.md  agents.yml.example  browser_agent_requirements.txt  check_s3_bucket.py  check_terrapin.py  check_vulns.py  config.yaml  debug_litellm.py  debug_pricing_flow.py  hola_mundo.py  mkdocs.yml  port_scanner.go  port_scanner.py  portscan.go  portscanner.txt  pricing.json  pyproject.toml  release_to_pypi.sh  scan_ip.py  scanner  security_check.py  simple_scanner.go  terrapin_check.py  terrapin_test.py  test_session_duplication_fix.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  requirements.txt
.devcontainer/qdrant_storage/: raft_state.json
.github/workflows/: tests.yml
benchmark/: README.md
benchmarks/: README.md  eval.py
benchmarks/cyberPII-bench/: README.md  annotation_metrics.py  memory01_gold.csv
benchmarks/cybermetric/: CyberMetric-10-v1.json  CyberMetric_evaluator.py  CyberMetric_evaluator_ollama.py  CyberMetric_evaluator_openrouter_ollama.py
benchmarks/seceval/: .langchain.db
benchmarks_old/cybermetric/: CyberMetric_evaluator_openrouter_ollama.py
ci/benchmark/: .benchmark.yml
ci/benchmarks/: .benchmarks.yml  .benchmarks.yml.bak
ci/test/: .test.yml
cyberPII-bench/: README.md
docs/: agents.md  cai_architecture.md  cai_citation_and_acknowledgments.md  cai_development.md  cai_faq.md  cai_find_us.md  cai_installation.md  cai_list_of_models.md  cai_quickstart.md  config.md  context.md  guardrails.md  handoffs.md  index.md  index2.md  mcp.md  models.md  multi_agent.md  quickstart.md  results.md  running_agents.md  streaming.md  tools.md  tracing.md  tracing_cai.md  usage_tracking.md
docs/cai/: index.md
docs/ref/: agent.md  agent_output.md  exceptions.md  function_schema.md  guardrail.md  handoffs.md  index.md  items.md  lifecycle.md  model_settings.md  result.md  run.md  run_context.md  stream_events.md  tool.md  usage.md
docs/stylesheets/: extra.css
docs/voice/: pipeline.md  quickstart.md  tracing.md
examples/agent_patterns/: claude.py  deterministic.py  litellm.py  ollama.py
examples/basic/: usage_tracking_example.py
examples/cai/: basic_usage.py  simple_one_tool_test.py  simple_one_tool_test_streamed.py  simple_test.py
examples/model_providers/: README.md  litellm.py  litellm_config.yaml  zhipuai_example.py
fluency/my-first-hack/: my_first_hack.ipynb
src/cai/: __init__.py  cli.py  cli_model_utils.py  util.py
tests/: conftest.py  conftest_pricing.py  fake_model.py  helpers.py  test_agent_hooks.py  test_agent_runner_streamed.py  test_agent_tracing.py  test_cli_print_deduplication.py  test_compact_command.py  test_computer_action.py  test_config.py  test_doc_parsing.py  test_global_hooks.py  test_guardrails.py  test_max_turns.py  test_openai_chatcompletions.py  test_output_tool.py  test_pretty_print.py  test_pricing.py  test_responses.py  test_responses_tracing.py  test_run_step_processing.py  test_tool_converter.py  test_tool_use_behavior.py  test_tracing.py  test_tracing_errors.py  test_unified_pattern.py  testing_processor.py
tests/agents/: test_agent_config.py  test_agent_hooks.py  test_agent_inferece.py  test_agent_inference.py  test_agent_one_tool.py  test_agent_prompt_system_master_template.py  test_agent_runner.py  test_agent_runner_streamed.py  test_global_hooks.py  test_items_helpers.py  test_max_turns.py
tests/cli/: __init__.py  base_cli_test.py  test_cli_streaming.py
tests/commands/: pytest.ini  test_command_agent.py  test_command_base.py  test_command_config.py  test_command_cost.py  test_command_flush.py  test_command_help.py  test_command_history.py  test_command_load.py  test_command_model.py  test_command_parallel.py  test_mcp_persistence.py  test_parallel_custom_prompts.py  test_parallel_interrupt_history.py
tests/core/: test_auto_compact.py  test_openai_chatcompletions.py  test_openai_chatcompletions_converter.py  test_openai_chatcompletions_stream.py  test_openai_responses_converter.py  test_run_config.py  test_run_step_execution.py  test_run_step_processing.py
tests/mcp/: helpers.py  test_caching.py  test_connect_disconnect.py  test_mcp_tracing.py  test_mcp_util.py  test_runner_calls_mcp.py  test_server_errors.py
tests/others/: test_config.py  test_extension_filters.py  test_function_schema.py  test_pretty_print.py  test_result_cast.py  test_strict_schema.py  test_trace_processor.py  test_visualization.py
tests/tools/: test_function_tool.py  test_function_tool_decorator.py  test_handoff_tool.py  test_tool_choice_reset.py  test_tool_generic_linux_command.py  test_tool_use_behavior.py
tests/tracing/: test_agent_tracing.py  test_processor_api_key.py  test_responses_tracing.py  (+3 more)
tools/: __init__.py  asciinema.py  case_study_generator.py  gif.py  logs.py  replay.py
(+221 files in other folders)
